[package]
name = "submeta"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Decode Substrate metadata from stdin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "6.0.0"
clap = { version = "4.0.9", features = ["derive"] }
frame-metadata = { version = "15.0.0" }
parity-scale-codec = { version = "3.3.0", default-features = false }
